--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,13 +1,16 @@
 <resources>
-  <string name="app_name">DominionAndroid</string>
-  <string name="navigation_drawer_open">Open navigation drawer</string>
-  <string name="navigation_drawer_close">Close navigation drawer</string>
-  <string name="nav_header_title">Android Studio</string>
-  <string name="nav_header_subtitle">android.studio@android.com</string>
-  <string name="nav_header_desc">Navigation header</string>
-  <string name="action_settings">Settings</string>
-  <string name="login_failure_message">Unable to log in with credentials provided.</string>
-  <string name="sign_out">Sign out</string>
-  <string name="title_activity_action">ActionActivity</string>
-  <string name="section_format">Hello World from section: %1$d</string>
+    <string name="app_name">DominionAndroid</string>
+    <string name="navigation_drawer_open">Open navigation drawer</string>
+    <string name="navigation_drawer_close">Close navigation drawer</string>
+    <string name="nav_header_title">Android Studio</string>
+    <string name="nav_header_subtitle">android.studio@android.com</string>
+    <string name="nav_header_desc">Navigation header</string>
+    <string name="action_settings">Settings</string>
+    <string name="login_failure_message">Unable to log in with credentials provided.</string>
+    <string name="sign_out">Sign out</string>
+    <string name="title_activity_action">ActionActivity</string>
+    <string name="section_format">Hello World from section: %1$d</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+   
 </resources>
