--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-  <string name="app_name">DominionAndroid</string>
+  <string name="app_name">Dominion-Android-Client</string>
   <string name="navigation_drawer_open">Open navigation drawer</string>
   <string name="navigation_drawer_close">Close navigation drawer</string>
   <string name="nav_header_title">Android Studio</string>
@@ -7,8 +7,40 @@
   <string name="nav_header_desc">Navigation header</string>
   <string name="action_settings">Settings</string>
   <string name="login_failure_message">Unable to log in with credentials provided.</string>
-  <string name="sign_out">Sign out</string>
   <string name="title_activity_action">ActionActivity</string>
   <string name="section_format">Hello World from section: %1$d</string>
+  <string name="web_client_id">9249910280-c2um6rlptvfbohdho7qi6vpoa678t15t.apps.googleusercontent.com</string>
+  <string name="hint_user_id">User ID</string>
+  <string name="get_custom_token">Get Token</string>
+  <string name="sign_in">Sign In</string>
+  <string name="send_link">Send Link</string>
+  <string name="verify_email">Verify Email</string>
+  <string name="disconnect">Disconnect</string>
+  <string name="loading">Loading…</string>
+  <string name="custom_token">Custom Token</string>
+  <string name="signed_in">Signed In</string>
+  <string name="signed_out">Signed Out</string>
+  <string name="token_null">Token: null</string>
+  <string name="hint_email">Email</string>
+  <string name="hint_password">Password</string>
+  <string name="desc_firebase_lockup">Firebase logo and name</string>
+  <string name="auth_failed">Authentication failed</string>
+  <string name="start_phone_auth">Start</string>
+  <string name="verify_phone_auth">Verify</string>
+  <string name="resend_phone_auth">Resend</string>
+  <string name="hint_phone_number">Phone Number</string>
+  <string name="hint_verification_code">Verification Code</string>
+  <string name="status_code_sent">Code Sent</string>
+  <string name="status_verification_failed">Verification failed</string>
+  <string name="status_verification_succeeded">Verification succeeded</string>
+  <string name="status_sign_in_failed">Sign-in failed</string>
+  <string name="instant_validation">(instant validation)</string>
 
+  <string name="firebase_status_fmt">Firebase UID: %s</string>
+  <string name="firebase_user_management">Firebase User Management</string>
+
+  <string name="google_status_fmt">Google User: %s</string>
+  <string name="google_title_text">Google Sign In</string>
+  <string name="error_sign_in_failed">Sign in failed, see logs for details.</string>
+  <string name="sign_out">Sign Out</string>
 </resources>
