--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,6 +10,7 @@
   <string name="sign_out">Sign out</string>
   <string name="title_activity_action">ActionActivity</string>
   <string name="section_format">Hello World from section: %1$d</string>
+  <string name="num_in_stack">Number Left In Stack: </string>
 
   <!-- TODO: Remove or change this placeholder text -->
   <string name="hello_blank_fragment">Hello blank fragment</string>
